--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,11 @@
 /* client/src/App.css*/
 /* App.css - Apple-Inspired Global Layout */
-@import url('https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600;700&display=swap');
+@import "@fontsource/inter/300.css";
+@import "@fontsource/inter/400.css";
+@import "@fontsource/inter/500.css";
+@import "@fontsource/inter/600.css";
+@import "@fontsource/inter/700.css";
+@import "@fortawesome/fontawesome-free/css/all.min.css";
 
 * {
   box-sizing: border-box;
@@ -9,8 +14,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
+   font-family: 'Inter', 'Roboto', 'Open Sans', 'Lato', sans-serif;
+-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F5F5F7; /* Apple light gray */
   color: #1D1D1F; /* Apple dark gray */
